kubernetes/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: unigraph-api
  namespace: unigraph-backend
spec:
  hosts:
    - unigraph.internal
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: unigraph-backend
            port:
              number: 8000
